feat(app): allow unauthenticated access to commit status view
Close: #6

--- a/views/app/commit.html
+++ b/views/app/commit.html
@@ -30,6 +30,7 @@
   </div>
 </div>
 
+{% if req.session.auth %}
 <h2 class="ui header">
   <i class="plug icon"></i>
   <div class="content">Statuses</div>
@@ -72,4 +73,5 @@
     </div>
   </div>
 </div>
+{% endif %}
 {% endblock %}
