--- a/views/base.html
+++ b/views/base.html
@@ -19,7 +19,7 @@
 
     {% include "nav.html" %}
 
-    <div class="ui main container">
+    <div class="ui main {{ cclass }} container">
       {% block container %}{% endblock %}
     </div>
 
