--- a/views/page/about.html
+++ b/views/page/about.html
@@ -49,6 +49,40 @@
   </div>
 
   <div class="ui vertical stripe segment">
+    <div class="ui middle aligned equal width stackable grid">
+      <div class="row">
+        <div class="center aligned column">
+          <i class="massive grey github icon"></i>
+        </div>
+        <div class="left aligned column">
+          <p>Just log in with your existing GitHub account, no signup required,
+          and choose your public or private repositories.</p>
+        </div>
+      </div>
+
+      <div class="row">
+        <div class="right aligned column">
+          <p>Zero configuration required. Just log in, choose the repository you
+          want to verify, and you are good to go.</p>
+        </div>
+        <div class="center aligned column">
+          <i class="massive grey wizard icon"></i>
+        </div>
+      </div>
+
+      <div class="row">
+        <div class="center aligned column">
+          <i class="massive grey checkmark icon"></i>
+        </div>
+        <div class="left aligned column">
+          <p>Sit back and watch while your pull requests gets validated and your
+          collaborators gets instant feedback on their commits.</p>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <!--<div class="ui vertical stripe segment">
     <div class="ui text container">
       <h3 class="ui header">Breaking The Grid, Grabs Your Attention</h3>
 
@@ -71,6 +105,6 @@
 
       <a class="ui large button">I'm Still Quite Interested</a>
     </div>
-  </div>
+  </div>-->
 </div>
 {% endblock %}
